examples/test/testpolicy10660.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10660
  namespace: namespace200
spec:
  podSelector:
    matchLabels:
      key1: value39
      key21: value33
      key35: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value7
          key41: value28
      podSelector:
        matchLabels:
          key14: value39
          key0: value28
          key8: value26
